cmake_minimum_required(VERSION 3.4)
project(SLAM)
set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_STANDARD 11)
list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
find_package(Sophus REQUIRED )
find_package(OpenCV REQUIRED)
find_package(Ceres REQUIRED )
find_package(PCL REQUIRED COMPONENT common io)
add_definitions(${PCL_DEFINITIONS})
find_package(G2O REQUIRED)
#加入这个
find_package(CSparse REQUIRED)
include_directories(${G2O_INCLUDE_DIRS})
include_directories(${CERES_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${Sophus_INCLUDE_DIRS} "/usr/include/eigen3")
include_directories(${CSPARSE_INCLUDE_DIR})
MESSAGE(STATUS "version: ${OpenCV_VERSION}")
add_executable(eigen src/eigen.cpp)
add_executable(useGeometry src/useGeometry.cpp)
add_executable(usesophus src/usesophus.cpp)
add_executable(joinmap src/joinmap.cpp)
add_executable(ceres_test src/ceres_test.cpp)
add_executable(g2o_test src/g2o_test.cpp)
add_executable(feature_extraction src/feature_extraction.cpp)
add_executable(pose_estimation_2d2d src/pose_estimation_2d2d.cpp)
add_executable(triangulation src/triangulation.cpp)
add_executable(pose_estimation_3d2d src/pose_estimation_3d2d.cpp)
add_executable(pose_estimation_3d3d src/pose_estimation_3d3d.cpp)
add_executable(useLK src/useLK.cpp)
add_executable(direct_sparse src/direct_sparse.cpp)
target_link_libraries(triangulation ${OpenCV_LIBS})
target_link_libraries(pose_estimation_2d2d ${OpenCV_LIBS})
target_link_libraries(feature_extraction ${OpenCV_LIBS})
target_link_libraries( usesophus ${Sophus_LIBRARIES} )
target_link_libraries(joinmap ${PCL_LIBRARIES} ${OpenCV_LIBS})
target_link_libraries(ceres_test ${CERES_LIBRARIES} ${OpenCV_LIBS})
SET(G2O_LIBS g2o_cli g2o_ext_freeglut_minimal g2o_simulator g2o_solver_slam2d_linear
        g2o_types_icp g2o_types_slam2d g2o_core g2o_interface g2o_solver_csparse
        g2o_solver_structure_only g2o_types_sba g2o_types_slam3d g2o_csparse_extension
        g2o_opengl_helper g2o_solver_dense g2o_stuff g2o_types_sclam2d g2o_parser
        g2o_solver_pcg g2o_types_data g2o_types_sim3 cxsparse )
target_link_libraries(g2o_test ${OpenCV_LIBS} ${G2O_LIBS})
target_link_libraries(pose_estimation_3d2d ${OpenCV_LIBS} ${G2O_LIBS})
target_link_libraries(pose_estimation_3d3d ${OpenCV_LIBS} ${G2O_LIBS})
target_link_libraries(useLK ${OpenCV_LIBS})
target_link_libraries(direct_sparse ${OpenCV_LIBS} ${G2O_LIBS})